fixed wrapping issue in repo titles in projects.html

--- a/csc_new/staticfiles/css/style.css
+++ b/csc_new/staticfiles/css/style.css
@@ -169,7 +169,7 @@ p.footnote {
 
 /* div containing repo title, link, and language stats */
 .github_repo > div:nth-of-type(1) {
-	width:300px;
+	padding-bottom: 15px;
 }
 
 /* repo title and link */
@@ -184,6 +184,7 @@ p.footnote {
 /* repo language stats */
 .github_repo > div:nth-of-type(1) > div:nth-of-type(2) {
 	float:right;
+	text-align: right;
 	width:30%;
 }
 
